# pytrials-v2

./: .gitignore  AGENTS.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: ctg_playground.py  overlap.py  overlap_data.json
src/pytrials/: __init__.py  client.py  errors.py
src/pytrials/models/: __init__.py  enums.py  search.py  study.py
src/pytrials/modules/: __init__.py  studies.py
tests/: conftest.py  test_studies.py
tests/fixtures/: search_response.json  study_detail.json
